syntax = "proto3";

package examples;

import "google/protobuf/timestamp.proto";

message Order {
    string id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    double total = 4;
    string status = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    double price = 3;
} 